tests/baselines/reference/generatorTypeCheck7.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck7.ts(4,17): error TS2322: Type 'Iterator<number>' is not assignable to type 'WeirdIter'.
  Property 'hello' is missing in type 'Iterator<number>'.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck7.ts (1 errors) ====
    interface WeirdIter extends Iterator<number> {
        hello: string;
    }
    function* g1(): WeirdIter { }
                    ~~~~~~~~~
!!! error TS2322: Type 'Iterator<number>' is not assignable to type 'WeirdIter'.
!!! error TS2322:   Property 'hello' is missing in type 'Iterator<number>'.